# hw-web-14

./: .gitignore  alembic.ini  coverage.lcov  main.py  pyproject.toml  test.db  test_main.py
docs/source/: conf.py  index.rst
fastapi/versions/: 338d643b4973_add_role_of_user.py  a6c773310d11_add_field_confirmed.py  a7edb617eec8_add_relationship.py  ca273dc85ad3_init.py
migrations/: env.py
migrations/versions/: 2e35bcc5fb34_init.py  7013c04a7514_change_birthday_column_type.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16399  16401  16402  16403  16404  16406  16412  16413  16415  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  (+9 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
src/: schemas.py
src/conf/: config.ini
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  cloud_image.py  email.py  roles.py
src/services/templates/: email_template.html
tests/: conftest.py  test_main.py  test_repository_contacts.py  test_route_auth.py  test_route_contacts.py
