[tool.poetry]
name = "hw-web-11"
version = "0.1.0"
description = ""
authors = ["Dmytro-Kruhlov <hazzy1451@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.12.1"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.4.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
