[tool.poetry]
name = "hw-web-11"
version = "0.1.0"
description = ""
authors = ["Dmytro-Kruhlov <hazzy1451@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.12.1"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
python-multipart = "^0.0.6"
fastapi-jwt-auth = "^0.5.0"
httpx = "^0.25.1"
fastapi-mail = "^1.4.1"
pydantic-settings = "^2.1.0"
redis = "4.6"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.36.0"
setuptools = "^69.0.2"



[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]